--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             <ul class="navbar">
                 <li><a href="#" class="active">Home</a></li>
                 <li><a href="#">About Us</a></li>
-                <li><a href="#">Fitness Center</a></li>
+                <li><a href="#">Food hub</a></li>
                 <li><a href="#">Contact us</a></li>
             </ul>
         </div>
