--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     .btn {
         font-family: 'Baloo Bhaina 2', cursive;
         margin: 14px 9px;
-        background-color: black;
+        background-color: red;
         color: white;
         padding: 5px 14px;
         border: 2px solid grey;
